syntax = "proto3";

option go_package = "go.cluttr.dev/gitlab-exporter/protobuf/typespb";

package gitlabexporter.protobuf;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

import "gitlabexporter/protobuf/references.proto";

enum JobKind {
    JOBKIND_UNSPECIFIED = 0;
    JOBKIND_BUILD = 1;
    JOBKIND_BRIDGE = 2;
}

message Job {
    int64 id = 1;
    string name = 2;
    PipelineReference pipeline = 3;

    string ref = 4;
    string ref_path = 5;
    string status = 6;
    string failure_reason = 7;
    int64 exit_code = 8;
    
    JobTimestamps timestamps = 9;
    google.protobuf.Duration queued_duration = 10;
    google.protobuf.Duration duration = 11;
    double coverage = 12;

    string stage = 13;
    repeated string tags = 14;
    repeated JobProperty properties = 15;

    bool allow_failure = 16;
    bool manual = 17;
    bool retried = 18;
    bool retryable = 19;

    JobKind kind = 20;
    optional PipelineReference downstream_pipeline = 21;

    RunnerReference runner = 22;
}

message JobTimestamps {
    google.protobuf.Timestamp created_at = 1;
    google.protobuf.Timestamp queued_at = 2;
    google.protobuf.Timestamp started_at = 3;
    google.protobuf.Timestamp finished_at = 4;
    google.protobuf.Timestamp erased_at = 5;
}

message JobProperty {
    string name = 1;
    string value = 2;
}
