syntax = "proto3";

option go_package = "github.com/cluttrdev/gitlab-exporter/protobuf/typespb";

package gitlabexporter.protobuf;

import "gitlabexporter/protobuf/references.proto";

message TestReport {
    string id = 1;
    PipelineReference pipeline = 2;

    double total_time = 3;
    int64 total_count = 4;
    int64 success_count = 5;
    int64 failed_count = 6;
    int64 skipped_count = 7;
    int64 error_count = 8;
}

message TestSuite {
    string id = 1;
    TestReportReference test_report = 2;

    string name = 3;
    double total_time = 4;
    int64 total_count = 5;
    int64 error_count = 6;
    int64 skipped_count = 7;
    int64 failed_count = 8;
    int64 success_count = 9;
}

message TestCase {
    string id = 1;
    TestSuiteReference test_suite = 2;

    string status = 4;
    string name = 5;
    string classname = 6;
    string file = 7;
    double execution_time = 8;
    string system_output = 9;
    string stack_trace = 10;
    string attachment_url = 11;
}
